--- a/src/bsearch/fx/bsearchMain.fxml
+++ b/src/bsearch/fx/bsearchMain.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -7,16 +8,11 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bsearch.fx.MainController">
    <children>
-      <MenuBar layoutY="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <MenuBar layoutY="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" text="Exit" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
@@ -27,7 +23,7 @@
         </menus>
       </MenuBar>
       <TextField fx:id="browseField" layoutX="31.0" layoutY="41.0" prefHeight="25.0" prefWidth="576.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="40.0" />
-      <TabPane layoutX="28.0" layoutY="80.0" prefHeight="350.0" prefWidth="700.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="80.0">
+      <TabPane layoutX="28.0" layoutY="80.0" prefHeight="350.0" prefWidth="700.0" style="-fx-border-color: lightgray;" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="80.0">
         <tabs>
           <Tab text="Model">
                <content>
@@ -68,12 +64,12 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="481.0" layoutY="55.0" prefHeight="25.0" prefWidth="195.0" />
-                        <TextField layoutX="481.0" layoutY="91.0" prefHeight="25.0" prefWidth="194.0" />
-                        <TextField layoutX="481.0" layoutY="126.0" prefHeight="25.0" prefWidth="194.0" />
-                        <TextField layoutX="481.0" layoutY="160.0" prefHeight="25.0" prefWidth="194.0" />
-                        <TextField layoutX="481.0" layoutY="194.0" prefHeight="25.0" prefWidth="194.0" />
-                        <TextField layoutX="481.0" layoutY="228.0" prefHeight="25.0" prefWidth="60.0" />
+                        <TextField fx:id="MModelSetupField" layoutX="481.0" layoutY="55.0" prefHeight="25.0" prefWidth="195.0" />
+                        <TextField fx:id="MModelStepField" layoutX="481.0" layoutY="91.0" prefHeight="25.0" prefWidth="194.0" />
+                        <TextField fx:id="MMeasureField" layoutX="481.0" layoutY="126.0" prefHeight="25.0" prefWidth="194.0" />
+                        <TextField fx:id="MMeasureIfField" layoutX="481.0" layoutY="160.0" prefHeight="25.0" prefWidth="194.0" />
+                        <TextField fx:id="MModelStopConditionField" layoutX="481.0" layoutY="194.0" prefHeight="25.0" prefWidth="194.0" />
+                        <TextField fx:id="MModelStepLimitField" layoutX="481.0" layoutY="228.0" prefHeight="25.0" prefWidth="60.0" />
                         <Label layoutX="550.0" layoutY="232.0" text="model steps" />
                         <TextArea fx:id="MParamSpecsArea" layoutX="22.0" layoutY="39.0" prefHeight="230.0" prefWidth="368.0" />
                         <Button layoutX="339.0" layoutY="8.0" mnemonicParsing="false" text="?" />
@@ -112,15 +108,15 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </CheckBox>
-                        <CheckBox layoutX="449.0" layoutY="235.0" mnemonicParsing="false" text="Use ABS value?" />
+                        <CheckBox fx:id="SOFitnessDerivativeUseAbsCheckBox" layoutX="449.0" layoutY="235.0" mnemonicParsing="false" text="Use ABS value?" />
                         <ChoiceBox fx:id="SOGoalBox" layoutX="356.0" layoutY="74.0" prefWidth="150.0" />
                         <ChoiceBox fx:id="SOFitnessCollectingBox" layoutX="356.0" layoutY="114.0" prefWidth="150.0" />
                         <ChoiceBox fx:id="SOFixedSamplingBox" layoutX="218.0" layoutY="148.0" prefWidth="150.0" />
                         <ChoiceBox fx:id="SOCombineReplicatesBox" layoutX="356.0" layoutY="184.0" prefWidth="150.0" />
                         <ChoiceBox fx:id="SOWrtBox" disable="true" layoutX="195.0" layoutY="263.0" prefWidth="150.0" />
-                        <Label layoutX="156.0" layoutY="267.0" text="w.r.t." />
-                        <Label layoutX="388.0" layoutY="267.0" text="Δ = " />
-                        <TextField layoutX="376.0" layoutY="148.0" prefHeight="25.0" prefWidth="128.0" />
+                        <Label fx:id="SOWrtLabel" disable="true" layoutX="156.0" layoutY="267.0" text="w.r.t." />
+                        <Label fx:id="SODeltaLabel" disable="true" layoutX="388.0" layoutY="267.0" text="Δ = " />
+                        <TextField fx:id="SOFitnessSamplingRepetitionsField" layoutX="376.0" layoutY="148.0" prefHeight="25.0" prefWidth="128.0" />
                         <TextField fx:id="SODeltaField" disable="true" layoutX="416.0" layoutY="263.0" />
                      </children></Pane>
                </content>
@@ -129,7 +125,7 @@
                <content>
                   <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <CheckBox layoutX="28.0" layoutY="225.0" mnemonicParsing="false" text="Use fitness caching" />
+                        <CheckBox fx:id="SACachingCheckBox" layoutX="28.0" layoutY="225.0" mnemonicParsing="false" text="Use fitness caching" />
                         <Label layoutX="354.0" layoutY="229.0" text="Evaluation limit: ">
                            <font>
                               <Font name="System Bold" size="12.0" />
@@ -148,8 +144,8 @@
                         </Label>
                         <ChoiceBox fx:id="SAChromosomeTypeBox" layoutX="25.0" layoutY="282.0" prefWidth="150.0" />
                         <Button layoutX="211.0" layoutY="282.0" mnemonicParsing="false" text="?" />
-                        <TextField layoutX="450.0" layoutY="255.0" />
-                        <TextField layoutX="451.0" layoutY="225.0" />
+                        <TextField fx:id="SABestCheckingField" layoutX="450.0" layoutY="255.0" />
+                        <TextField fx:id="SAEvaluationLimitField" layoutX="451.0" layoutY="225.0" />
                         <Label layoutX="252.0" layoutY="18.0" text="Search Method Configuration">
                            <font>
                               <Font name="System Bold" size="14.0" />
@@ -157,10 +153,10 @@
                         </Label>
                         <ChoiceBox fx:id="SASearchMethodBox" layoutX="14.0" layoutY="38.0" prefWidth="150.0" />
                         <Button layoutX="184.0" layoutY="38.0" mnemonicParsing="false" text="?" />
-                        <TableView layoutX="16.0" layoutY="77.0" prefHeight="140.0" prefWidth="667.0">
+                        <TableView fx:id="SASearchMethodTable" layoutX="16.0" layoutY="77.0" prefHeight="140.0" prefWidth="667.0">
                           <columns>
-                            <TableColumn prefWidth="397.0" text="Parameter" />
-                            <TableColumn minWidth="0.0" prefWidth="268.0" text="Value" />
+                            <TableColumn fx:id="SAParamCol" prefWidth="397.0" text="Parameter" />
+                            <TableColumn fx:id="SAValCol" minWidth="0.0" prefWidth="268.0" text="Value" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
