Save function, save a blank file but no error message

--- a/src/bsearch/fx/bsearchMain.fxml
+++ b/src/bsearch/fx/bsearchMain.fxml
@@ -12,6 +12,8 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
+                  <MenuItem mnemonicParsing="false" onAction="#actionSave" text="Save" />
+                  <MenuItem mnemonicParsing="false" onAction="#actionSaveAs" text="Save As" />
               <MenuItem mnemonicParsing="false" text="Exit" />
             </items>
           </Menu>
