--- a/src/bsearch/fx/ProgressDialog.fxml
+++ b/src/bsearch/fx/ProgressDialog.fxml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.web.WebView?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bsearch.fx.ProgressController">
    <children>
-      <LineChart>
+      <LineChart fx:id="progressLineChart" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <xAxis>
-          <CategoryAxis side="BOTTOM" />
+          <NumberAxis side="BOTTOM" />
         </xAxis>
         <yAxis>
           <NumberAxis side="LEFT" />
         </yAxis>
       </LineChart>
-      <Pane layoutX="500.0" layoutY="14.0" prefHeight="362.0" prefWidth="213.0" />
-      <Label layoutX="23.0" layoutY="419.0" text="Label" AnchorPane.leftAnchor="10.0" />
-      <ProgressBar layoutX="133.0" layoutY="420.0" prefHeight="18.0" prefWidth="425.0" progress="0.0" />
-      <Label layoutX="564.0" layoutY="420.0" text="Label" AnchorPane.rightAnchor="10.0" />
-      <Button layoutX="190.0" layoutY="455.0" mnemonicParsing="false" text="Button" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <BorderPane layoutX="9.0" layoutY="400.0" prefHeight="58.0" prefWidth="707.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+         <left>
+            <Label fx:id="labelMessage" BorderPane.alignment="CENTER" />
+         </left>
+         <center>
+            <ProgressBar fx:id="progressBar" prefHeight="18.0" prefWidth="374.0" BorderPane.alignment="CENTER" />
+         </center>
+         <right>
+            <Label fx:id="labelTimeRemaining" text=" " BorderPane.alignment="CENTER" />
+         </right>
+      </BorderPane>
+      <WebView fx:id="infoTextWebView" layoutX="500.0" layoutY="14.0" prefHeight="348.0" prefWidth="215.0" />
+      <Button fx:id="cancelAndDoneButton" layoutX="338.0" layoutY="449.0" mnemonicParsing="false" onAction="#doCancel" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
    </children>
 </AnchorPane>
