spinner editable, show error if put in bad integer

--- a/src/bsearch/fx/RunOptionDialog.fxml
+++ b/src/bsearch/fx/RunOptionDialog.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="326.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bsearch.fx.RunOptionDialogController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="326.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bsearch.fx.RunOptionDialogController">
    <children>
       <Label layoutX="24.0" layoutY="25.0" text="Output file stem: " />
       <Label layoutX="116.0" layoutY="82.0" text="Number of searches: " />
@@ -22,17 +22,17 @@
       <Button fx:id="starSearchButton" layoutX="306.0" layoutY="269.0" mnemonicParsing="false" onAction="#updateOptions" text="Start Search" />
       <Button fx:id="cancelButton" layoutX="471.0" layoutY="269.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
       
-      <Spinner fx:id="searchesNumSpinner" layoutX="232.0" layoutY="78.0">
+      <Spinner fx:id="searchesNumSpinner" editable="true" layoutX="232.0" layoutY="78.0">
       <valueFactory>
         <SpinnerValueFactory.IntegerSpinnerValueFactory max="10" min="0" />
       </valueFactory>
       </Spinner>
-      <Spinner fx:id="startingSearchIDSipnner" layoutX="232.0" layoutY="116.0">
+      <Spinner fx:id="startingSearchIDSpinner" editable="true" layoutX="232.0" layoutY="116.0">
       <valueFactory>
         <SpinnerValueFactory.IntegerSpinnerValueFactory max="10" min="0" />
       </valueFactory>
       </Spinner>
-      <Spinner fx:id="iniRanSeedSpinner" layoutX="232.0" layoutY="152.0">
+      <Spinner fx:id="iniRanSeedSpinner" editable="true" layoutX="232.0" layoutY="152.0">
       <valueFactory>
         <SpinnerValueFactory.IntegerSpinnerValueFactory max="10" min="0" />
       </valueFactory>
