--- a/src/bsearch/fx/bsearchMain.fxml
+++ b/src/bsearch/fx/bsearchMain.fxml
@@ -46,7 +46,8 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+                  <MenuItem mnemonicParsing="false" onAction="#showTutorialAction" text="Tutorial" />
+              <MenuItem mnemonicParsing="false" onAction="#showAboutAction" text="About" />
             </items>
           </Menu>
         </menus>
